--- a/BeautyForestAgent/Properties/Resources.resx
+++ b/BeautyForestAgent/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="demo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\demo.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="64943726_346069669412049_6811846327916298240_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\64943726_346069669412049_6811846327916298240_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
